[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["All Might <'allmight.twelve@gmail.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
